--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.medifree.functions"
+        applicationId "com.knu.medifree"
         minSdk 21
         targetSdk 31
         versionCode 1
