--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.knu.medifree">
 
     <application
@@ -10,14 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Functions">
         <activity
-            android:name="com.knu.medifree.MainActivity"
+            android:name="com.knu.medifree.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.knu.medifree.SignupDoctorActivity"/>
+        <activity android:name="com.knu.medifree.SignupPatientActivity"/>
+        <activity android:name="com.knu.medifree.TypeActivity"/>
     </application>
-
 </manifest>
