--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    //ktor framework related to webrtc
+    ext.ktor_version = '1.1.4'
+
     repositories {
         google()
         mavenCentral()
