--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,5 +32,7 @@
         <activity android:name="com.knu.medifree.DOfficeActivity"/>
         <activity android:name="com.knu.medifree.DHomeActivity"/>
         <activity android:name="com.knu.medifree.DAppActivity"/>
+        <activity android:name="com.knu.medifree.PSeldocActivity"/>
+        <activity android:name="com.knu.medifree.PSeltimeActivity"/>
     </application>
 </manifest>
