--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,18 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
+        debug{
+            //코드 난독화 추가
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFile 'proguard-rules.pro'
+            proguardFile 'proguard-debug.pro'
+        }
+        release {
+            //코드 난독화 추가
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFile 'proguard-rules.pro'
         }
     }
     packagingOptions {
