poffice와 doctor office 에 webrtc 부분이 추가 되었습니다 poffice의  reservnum 에 예약번호 넣어주사면 됩니다

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,14 @@ android {
     buildTypes {
         debug{
             //코드 난독화 추가
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             proguardFile 'proguard-rules.pro'
             proguardFile 'proguard-debug.pro'
         }
         release {
             //코드 난독화 추가
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             proguardFile 'proguard-rules.pro'
         }
