--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true"
+            android:theme="@style/Theme.FullScreen"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
